@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+- pts-core: Various fixes
+
 Phoronix Test Suite 5.6 Milestone 1
 13 January 2015
 
